# agent-collaboration-os

./: .gitignore  README.md
backend/: README.md  package-lock.json  package.json  tmp-repro-unassigned-overview.js  tsconfig.json
backend/demo/: demo-code-review-swarm.ts  demo-customer-support-swarm.ts
backend/docs/: migration-v1-to-v2.md
backend/scripts/: ci-migration-check.js  live-load-proof.sh  (+3 more)
cli/: install.sh  pyproject.toml
cli/zz_cli/: RUNTIME.md  __init__.py  agent_state.py  executor.py  fake_agent.py  invoke_handler.py  invoke_server.py  main.py  runtime.py  runtime_demo.py
dashboard/: agent-platform.skill.md  agent-start.html  agents.html  approvals.html  human-workspace-simple.html  human-workspace.html  landing.html  owner-home.html  product.html  project-space.html  repository.html  tasks.html  workbench.html
deploy/: setup.sh
docs/: PRODUCT-PLAN.md  RESEARCH-FINAL-PLAN.md  agent-resume-and-autostart.md  api-surface-freeze.md  auth-permission-matrix.md  auto-changeset-and-resume.md  dependency-audit-triage.md  deployment.md  e2e-demo-simple-project.md  future-github-provider-design.md  gate3-md-db-reconciliation-acceptance.md  git-backend-cli-sdk.md  git-phase3-authority.md  git-read-path-switch.md  golden-path-ci-evidence.md  golden-path-open-decisions.md  landing.html  main-agent-pm-feature.md  nas-lan-debugging.md  nas-lan-e2e-runbook.md  operations.md  orchestration.md  oss-reusable-features-report.md  pm-acceptance-contract-1e.md  pre-release-gate-runbook.md  quickstart.md  real-git-backend.md  runtime-demo.md  versioning-and-gates.md
(+236 files in other folders)
