[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zz-cli"
version = "0.2.0"
description = "CLI for zhuzeyang-agent — The Agent Collaboration OS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zhuzeyang-agent Team"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
zz = "zz_cli.main:app"

[tool.setuptools.packages.find]
include = ["zz_cli*"]
